adding srcset to all img tags

--- a/index.html
+++ b/index.html
@@ -190,13 +190,41 @@
 						./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h_c_scale,w_1090.jpg 1090w"
 					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" />
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" />
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				srcset="
+					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_254.jpg 254w,
+					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_454.jpg 454w,
+					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_640.jpg 640w,
+					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_787.jpg 787w,
+					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_884.jpg 884w,
+					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_984.jpg 984w,
+					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_1047.jpg 1047w,
+					./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_1090.jpg 1090w"
+					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash.jpg" />
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" />
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				srcset="
+					./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_254.jpg 254w,
+					./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_522.jpg 522w,
+					./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_738.jpg 738w,
+					./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_884.jpg 884w,
+					./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_1026.jpg 1026w,
+					./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_1090.jpg 1090w"
+					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" />
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" />
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				srcset="
+					./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt_c_scale,w_254.jpg 254w,
+					./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt_c_scale,w_641.jpg 641w,
+					./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt_c_scale,w_1090.jpg 1090w"
+					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash.jpg" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" />
+				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+				srcset="
+					./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl_c_scale,w_608.jpg 608w,
+					./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl_c_scale,w_1000.jpg 1000w,
+					./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl_c_scale,w_1090.jpg 1090w"
+					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" />
 			</div>
 		</div>
 		<div class="quote">
@@ -275,7 +303,13 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.png">
+				<img 
+				sizes="(min-width: 1600px) 419px, (min-width: 1200px) calc(28.16vw - 26px), (min-width: 1020px) calc(43.75vw - 68px), (min-width: 980px) calc(200vw - 1612px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)"
+				srcset="
+					./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_419.png 419w,
+					./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_651.png 651w,
+					./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_838.png 838w"
+				src="./assets/images/camera_vlyda5/camera.png">
 			</div>
 		</div>
 	</div>
