--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz_c_scale,w_2045.webp 2045w,
 					./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz_c_scale,w_2048.webp 2048w"
 						src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
-						width="1831" height="847"
+						width="100%" height="100%"
 						class="d-block w-100" alt="Homme en costume marchant dans la rue">
 				</div>
 				<div class="carousel-item">
@@ -117,7 +117,7 @@
 			./assets/images/nina/nina_dic0iw_c_scale,w_964.webp 964w,
 			./assets/images/nina/nina_dic0iw_c_scale,w_1055.webp 1055w,
 			./assets/images/nina/nina_dic0iw_c_scale,w_1120.webp 1120w" 
-			src="./assets/images/nina/nina.webp" width="614" height="612" >
+			src="./assets/images/nina/nina.webp" width="100%" height="100%" >
 		</div>
 		<div id="about-me">
 			<h3 class="about-me__title">A propos de moi</h3>
@@ -300,7 +300,7 @@
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_419.webp 419w,
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_651.webp 651w,
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_838.webp 838w" 
-				src="./assets/images/camera_vlyda5/camera.webp" width="419" height="418" >
+				src="./assets/images/camera_vlyda5/camera.webp" width="100%" height="100%" >
 			</div>
 		</div>
 	</div>
