alt's images, title and description

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
 	<meta charset="UTF-8">
+	<title>Nina Carducci - Photographe portraits et événements</title>
+	<meta name="description"
+		content="Photographe passionnée, je fige vos moments uniques avec créativité : concerts, entreprises, mariages, portraits. Capturez l'instant, créez des souvenirs éternels.">
 </head>
 
 <body>
@@ -70,7 +73,7 @@
 					./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_fnvsig/nicholas-green-nPz8akkUmDI-unsplash_fnvsig_c_scale,w_1981.webp 1981w,
 					./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_fnvsig/nicholas-green-nPz8akkUmDI-unsplash_fnvsig_c_scale,w_2048.webp 2048w"
 						src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_fnvsig/nicholas-green-nPz8akkUmDI-unsplash.webp"
-						class="d-block w-100" alt="Public heureux">
+						class="d-block w-100" alt="Public en délire">
 				</div>
 				<div class="carousel-item">
 					<img sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
@@ -117,7 +120,7 @@
 			./assets/images/nina/nina_dic0iw_c_scale,w_964.webp 964w,
 			./assets/images/nina/nina_dic0iw_c_scale,w_1055.webp 1055w,
 			./assets/images/nina/nina_dic0iw_c_scale,w_1120.webp 1120w" 
-			src="./assets/images/nina/nina.webp" width="100%" height="100%" >
+			src="./assets/images/nina/nina.webp" width="100%" height="100%" alt="photo de nina">
 		</div>
 		<div id="about-me">
 			<h3 class="about-me__title">A propos de moi</h3>
@@ -147,7 +150,7 @@
 				./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j_c_scale,w_914.webp 914w,
 				./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j_c_scale,w_932.webp 932w,
 				./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash.webp" />
+					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="concert vu du public"/>
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -156,21 +159,21 @@
 				./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj_c_scale,w_870.webp 870w,
 				./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj_c_scale,w_1078.webp 1078w,
 				./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash.webp" />
+					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Un homme en costume croisant les bras" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
 				./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash_qzliki_c_scale,w_254.webp 254w,
 				./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash_qzliki_c_scale,w_742.webp 742w,
 				./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash_qzliki_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash.webp" />
+					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Femme souriante lors d'une réunion"/>
 				<img data-gallery-tag="Mariages" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
 				./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc_c_scale,w_304.webp 304w,
 				./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc_c_scale,w_845.webp 845w,
 				./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash.webp" />
+					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="mains de mariés qui se touchent délicatement"/>
 				<img data-gallery-tag="Portrait" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -180,7 +183,7 @@
 				./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h_c_scale,w_905.webp 905w,
 				./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h_c_scale,w_995.webp 995w,
 				./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash.webp" />
+					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait d'un homme fermant les yeux"/>
 				<img data-gallery-tag="Mariages" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -192,7 +195,7 @@
 				./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_984.webp 984w,
 				./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_1047.webp 1047w,
 				./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash.webp" />
+					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Deux mariés se tenant la main en rigolant"/>
 				<img data-gallery-tag="Portrait" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -202,21 +205,21 @@
 				./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_884.webp 884w,
 				./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_1026.webp 1026w,
 				./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash.webp" />
+					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Femme se touchant les cheveux avec une main"/>
 				<img data-gallery-tag="Concert" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
 				./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt_c_scale,w_254.webp 254w,
 				./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt_c_scale,w_641.webp 641w,
 				./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash.webp" />
+					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur en plein concert"/>
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
 				./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl_c_scale,w_608.webp 608w,
 				./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl_c_scale,w_1000.webp 1000w,
 				./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" />
+					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Femme sourante devant un ordinateur portable"/>
 			</div>
 		</div>
 		<div class="quote">
@@ -300,7 +303,7 @@
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_419.webp 419w,
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_651.webp 651w,
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_838.webp 838w" 
-				src="./assets/images/camera_vlyda5/camera.webp" width="100%" height="100%" >
+				src="./assets/images/camera_vlyda5/camera.webp" width="100%" height="100%" alt="Un appareil photo">
 			</div>
 		</div>
 	</div>
