--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
 	<title>Nina Carducci - Photographe portraits et événements</title>
 	<meta name="description"
 		content="Photographe passionnée, je fige vos moments uniques avec créativité : concerts, entreprises, mariages, portraits. Capturez l'instant, créez des souvenirs éternels.">
+	<script type="application/ld+json">
+	{
+	"@context": "https://schema.org/",
+	"@type": "Person",
+	"name": "Nina Carducci",
+	"url": "https://malekbena.github.io/nina-carducci/",
+	"image": "https://raw.githubusercontent.com/malekbena/nina-carducci/main/assets/images/nina/nina.webp",
+	"sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr",
+	"jobTitle": "Photographe",
+	"worksFor": {
+		"@type": "Organization",
+		"name": "Nina Carducci"
+	}  
+	}
+</script>
 </head>
 
 <body>
@@ -25,7 +40,8 @@
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-						target="_blank"><img src="assets/images/instagram.png" alt="logo Instagram" height="100%" width="100%"></a></li>
+						target="_blank"><img src="assets/images/instagram.png" alt="logo Instagram" height="100%"
+							width="100%"></a></li>
 			</ul>
 		</div>
 	</div>
@@ -57,8 +73,7 @@
 					./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz_c_scale,w_2045.webp 2045w,
 					./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz_c_scale,w_2048.webp 2048w"
 						src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
-						width="100%" height="100%"
-						class="d-block w-100" alt="Homme en costume marchant dans la rue">
+						width="100%" height="100%" class="d-block w-100" alt="Homme en costume marchant dans la rue">
 				</div>
 				<div class="carousel-item">
 					<img sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
@@ -119,8 +134,8 @@
 			./assets/images/nina/nina_dic0iw_c_scale,w_860.webp 860w,
 			./assets/images/nina/nina_dic0iw_c_scale,w_964.webp 964w,
 			./assets/images/nina/nina_dic0iw_c_scale,w_1055.webp 1055w,
-			./assets/images/nina/nina_dic0iw_c_scale,w_1120.webp 1120w" 
-			src="./assets/images/nina/nina.webp" width="100%" height="100%" alt="photo de nina">
+			./assets/images/nina/nina_dic0iw_c_scale,w_1120.webp 1120w" src="./assets/images/nina/nina.webp" width="100%"
+				height="100%" alt="photo de nina">
 		</div>
 		<div id="about-me">
 			<h3 class="about-me__title">A propos de moi</h3>
@@ -150,7 +165,8 @@
 				./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j_c_scale,w_914.webp 914w,
 				./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j_c_scale,w_932.webp 932w,
 				./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="concert vu du public"/>
+					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+					alt="concert vu du public" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -159,21 +175,24 @@
 				./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj_c_scale,w_870.webp 870w,
 				./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj_c_scale,w_1078.webp 1078w,
 				./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Un homme en costume croisant les bras" />
+					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+					alt="Un homme en costume croisant les bras" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
 				./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash_qzliki_c_scale,w_254.webp 254w,
 				./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash_qzliki_c_scale,w_742.webp 742w,
 				./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash_qzliki_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Femme souriante lors d'une réunion"/>
+					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+					alt="Femme souriante lors d'une réunion" />
 				<img data-gallery-tag="Mariages" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
 				./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc_c_scale,w_304.webp 304w,
 				./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc_c_scale,w_845.webp 845w,
 				./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="mains de mariés qui se touchent délicatement"/>
+					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+					alt="mains de mariés qui se touchent délicatement" />
 				<img data-gallery-tag="Portrait" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -183,7 +202,8 @@
 				./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h_c_scale,w_905.webp 905w,
 				./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h_c_scale,w_995.webp 995w,
 				./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait d'un homme fermant les yeux"/>
+					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+					alt="Portrait d'un homme fermant les yeux" />
 				<img data-gallery-tag="Mariages" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -195,7 +215,8 @@
 				./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_984.webp 984w,
 				./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_1047.webp 1047w,
 				./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Deux mariés se tenant la main en rigolant"/>
+					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash.webp"
+					alt="Deux mariés se tenant la main en rigolant" />
 				<img data-gallery-tag="Portrait" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -205,21 +226,24 @@
 				./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_884.webp 884w,
 				./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_1026.webp 1026w,
 				./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Femme se touchant les cheveux avec une main"/>
+					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+					alt="Femme se touchant les cheveux avec une main" />
 				<img data-gallery-tag="Concert" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
 				./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt_c_scale,w_254.webp 254w,
 				./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt_c_scale,w_641.webp 641w,
 				./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur en plein concert"/>
+					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash.webp"
+					alt="Chanteur en plein concert" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
 				./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl_c_scale,w_608.webp 608w,
 				./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl_c_scale,w_1000.webp 1000w,
 				./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl_c_scale,w_1090.webp 1090w"
-					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Femme sourante devant un ordinateur portable"/>
+					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+					alt="Femme sourante devant un ordinateur portable" />
 			</div>
 		</div>
 		<div class="quote">
@@ -302,8 +326,8 @@
 					srcset="
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_419.webp 419w,
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_651.webp 651w,
-				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_838.webp 838w" 
-				src="./assets/images/camera_vlyda5/camera.webp" width="100%" height="100%" alt="Un appareil photo">
+				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_838.webp 838w"
+					src="./assets/images/camera_vlyda5/camera.webp" width="100%" height="100%" alt="Un appareil photo">
 			</div>
 		</div>
 	</div>
