script shema.org

--- a/index.html
+++ b/index.html
@@ -14,19 +14,35 @@
 	<meta name="description"
 		content="Photographe passionnée, je fige vos moments uniques avec créativité : concerts, entreprises, mariages, portraits. Capturez l'instant, créez des souvenirs éternels.">
 	<script type="application/ld+json">
-	{
-	"@context": "https://schema.org/",
-	"@type": "Person",
-	"name": "Nina Carducci",
-	"url": "https://malekbena.github.io/nina-carducci/",
-	"image": "https://raw.githubusercontent.com/malekbena/nina-carducci/main/assets/images/nina/nina.webp",
-	"sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr",
-	"jobTitle": "Photographe",
-	"worksFor": {
-		"@type": "Organization",
-		"name": "Nina Carducci"
-	}  
-	}
+		{
+		"@context": "https://schema.org",
+		"@type": "LocalBusiness",
+		"name": "Nina Carducci",
+		"image": "https://github.com/malekbena/nina-carducci/blob/main/assets/images/nina/nina.webp",
+		"@id": "",
+		"url": "https://malekbena.github.io/nina-carducci/",
+		"telephone": "05 56 67 78 89",
+		"address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "FR"
+		},
+		"openingHoursSpecification": {
+			"@type": "OpeningHoursSpecification",
+			"dayOfWeek": [
+			"Monday",
+			"Tuesday",
+			"Wednesday",
+			"Thursday",
+			"Friday"
+			],
+			"opens": "10:00",
+			"closes": "19:00"
+		},
+		"sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr" 
+		}
 </script>
 </head>
 
