meta google rich snippet

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 		"sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr" 
 		}
 </script>
+<meta property="og:site_name" content="Nina Carducci" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://malekbena.github.io/nina-carducci/" />
+<meta property="og:title" content="Nina Carducci - Photographe d'événements et de portraits sur Bordeaux" />
+<meta property="og:description" content="Photographe passionnée, je fige vos moments uniques avec créativité : concerts, entreprises, mariages, portraits. Capturez l'instant, créez des souvenirs éternels." />
+<meta property="og:image" content="https://github.com/malekbena/nina-carducci/blob/main/assets/images/nina/nina.webp" />
+
 </head>
 
 <body>
