google rich snippet title

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </script>
 
 <!-- Google Rich Snippet -->
-<meta itemprop="og:site_name" content="Nina Carducci" />
+<meta itemprop="title" content="Nina Carducci" />
 <meta itemprop="description" content="Photographe passionnée, je fige vos moments uniques avec créativité : concerts, entreprises, mariages, portraits. Capturez l'instant, créez des souvenirs éternels." />
 <meta itemprop="image" content="https://github.com/malekbena/nina-carducci/blob/main/assets/images/nina/nina.webp" />
 <!-- Open Graph / Facebook -->
