adding google rich snippet meta name

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		}
 	</script>
 	<!-- Google Rich Snippet -->
-	<meta itemprop="title" content="Nina Carducci - Photographe d'événements et de portraits sur Bordeaux" />
+	<meta itemprop="name" content="Nina Carducci - Photographe d'événements et de portraits sur Bordeaux" />
 	<meta itemprop="description"
 		content="Photographe passionnée, je fige vos moments uniques avec créativité : concerts, entreprises, mariages, portraits. Capturez l'instant, créez des souvenirs éternels." />
 	<meta itemprop="image"
