lazy loagin to images

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_fnvsig/nicholas-green-nPz8akkUmDI-unsplash_fnvsig_c_scale,w_1981.avif 1981w,
 					./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_fnvsig/nicholas-green-nPz8akkUmDI-unsplash_fnvsig_c_scale,w_2048.avif 2048w"
 						src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_fnvsig/nicholas-green-nPz8akkUmDI-unsplash.avif"
-						class="d-block w-100" alt="Public en délire">
+						class="d-block w-100" alt="Public en délire" loading="lazy" />
 				</div>
 				<div class="carousel-item">
 					<img sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
@@ -147,7 +147,7 @@
 						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci_c_scale,w_2042.avif 2042w,
 						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci_c_scale,w_2048.avif 2048w"
 						src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash.avif"
-						class="d-block w-100" alt="2 mariés qui s'embrassent">
+						class="d-block w-100" alt="2 mariés qui s'embrassent" loading="lazy" />
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -174,7 +174,7 @@
 			./assets/images/nina/nina_dic0iw_c_scale,w_964.avif 964w,
 			./assets/images/nina/nina_dic0iw_c_scale,w_1055.avif 1055w,
 			./assets/images/nina/nina_dic0iw_c_scale,w_1120.avif 1120w" src="./assets/images/nina/nina.avif" width="100%"
-				height="100%" alt="photo de nina">
+				height="100%" alt="photo de nina" />
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -205,7 +205,7 @@
 				./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j_c_scale,w_932.avif 932w,
 				./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j_c_scale,w_1090.avif 1090w"
 					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_n29v6j/aaron-paul-wnX-fXzB6Cw-unsplash.avif"
-					alt="concert vu du public" />
+					alt="concert vu du public" loading="lazy" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -215,7 +215,7 @@
 				./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj_c_scale,w_1078.avif 1078w,
 				./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj_c_scale,w_1090.avif 1090w"
 					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_d7shoj/ali-morshedlou-WMD64tMfc4k-unsplash.avif"
-					alt="Un homme en costume croisant les bras" />
+					alt="Un homme en costume croisant les bras" loading="lazy" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -223,7 +223,7 @@
 				./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash_qzliki_c_scale,w_742.avif 742w,
 				./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash_qzliki_c_scale,w_1090.avif 1090w"
 					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_qzliki/jason-goodman-tHO1_OuKbg0-unsplash.avif"
-					alt="Femme souriante lors d'une réunion" />
+					alt="Femme souriante lors d'une réunion" loading="lazy" />
 				<img data-gallery-tag="Mariages" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -231,7 +231,7 @@
 				./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc_c_scale,w_845.avif 845w,
 				./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc_c_scale,w_1090.avif 1090w"
 					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_exzmgc/hannah-busing-RvF2R_qMpRk-unsplash.avif"
-					alt="mains de mariés qui se touchent délicatement" />
+					alt="mains de mariés qui se touchent délicatement" loading="lazy" />
 				<img data-gallery-tag="Portrait" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -242,7 +242,7 @@
 				./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h_c_scale,w_995.avif 995w,
 				./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h_c_scale,w_1090.avif 1090w"
 					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_oynq6h/ade-tunji-rVkhWWZFAtQ-unsplash.avif"
-					alt="Portrait d'un homme fermant les yeux" />
+					alt="Portrait d'un homme fermant les yeux" loading="lazy" />
 				<img data-gallery-tag="Mariages" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -255,7 +255,7 @@
 				./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_1047.avif 1047w,
 				./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8_c_scale,w_1090.avif 1090w"
 					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_fqiyr8/jakob-owens-SiniLJkXhMc-unsplash.avif"
-					alt="Deux mariés se tenant la main en rigolant" />
+					alt="Deux mariés se tenant la main en rigolant" loading="lazy" />
 				<img data-gallery-tag="Portrait" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -266,7 +266,7 @@
 				./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_1026.avif 1026w,
 				./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4_c_scale,w_1090.avif 1090w"
 					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_om5nq4/nino-van-prattenburg--443cl1uR_8-unsplash.avif"
-					alt="Femme se touchant les cheveux avec une main" />
+					alt="Femme se touchant les cheveux avec une main" loading="lazy" />
 				<img data-gallery-tag="Concert" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -274,7 +274,7 @@
 				./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt_c_scale,w_641.avif 641w,
 				./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt_c_scale,w_1090.avif 1090w"
 					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_sfa9kt/austin-neill-hgO1wFPXl3I-unsplash.avif"
-					alt="Chanteur en plein concert" />
+					alt="Chanteur en plein concert" loading="lazy" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
 					srcset="
@@ -282,7 +282,7 @@
 				./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl_c_scale,w_1000.avif 1000w,
 				./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl_c_scale,w_1090.avif 1090w"
 					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_zywxwl/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.avif"
-					alt="Femme sourante devant un ordinateur portable" />
+					alt="Femme sourante devant un ordinateur portable" loading="lazy" />
 			</div>
 		</div>
 		<div class="quote">
@@ -366,7 +366,7 @@
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_419.avif 419w,
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_651.avif 651w,
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_838.avif 838w"
-					src="./assets/images/camera_vlyda5/camera.avif" width="100%" height="100%" alt="Un appareil photo">
+					src="./assets/images/camera_vlyda5/camera.avif" width="100%" height="100%" alt="Un appareil photo" loading="lazy" />
 			</div>
 		</div>
 	</div>
