logo instagram height and width

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-						target="_blank"><img src="assets/images/instagram.png" alt="logo Instagram" width="100%"></a></li>
+						target="_blank"><img src="assets/images/instagram.png" alt="logo Instagram" height="20" width="20"></a></li>
 			</ul>
 		</div>
 	</div>
