--- a/index.html
+++ b/index.html
@@ -7,43 +7,14 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
+		media="print" onload="this.onload=null;this.removeAttribute('media');"
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
 	<meta charset="UTF-8">
 	<title>Nina Carducci - Photographe portraits et événements</title>
 	<meta name="description"
 		content="Photographe passionnée, je fige vos moments uniques avec créativité : concerts, entreprises, mariages, portraits. Capturez l'instant, créez des souvenirs éternels.">
-	<script type="application/ld+json">
-		{
-		"@context": "https://schema.org",
-		"@type": "LocalBusiness",
-		"name": "Nina Carducci",
-		"image": "https://github.com/malekbena/nina-carducci/blob/main/assets/images/nina/nina.avif",
-		"@id": "",
-		"url": "https://malekbena.github.io/nina-carducci/",
-		"telephone": "05 56 67 78 89",
-		"address": {
-			"@type": "PostalAddress",
-			"streetAddress": "68 avenue Alsace-Lorraine",
-			"addressLocality": "Bordeaux",
-			"postalCode": "33200",
-			"addressCountry": "FR"
-		},
-		"openingHoursSpecification": {
-			"@type": "OpeningHoursSpecification",
-			"dayOfWeek": [
-			"Monday",
-			"Tuesday",
-			"Wednesday",
-			"Thursday",
-			"Friday"
-			],
-			"opens": "10:00",
-			"closes": "19:00"
-		},
-		"sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr" 
-		}
-	</script>
+	
 	<!-- Google Rich Snippet -->
 	<meta itemprop="name" content="Nina Carducci - Photographe d'événements et de portraits sur Bordeaux" />
 	<meta itemprop="description"
@@ -370,10 +341,41 @@
 		</div>
 	</div>
 </body>
+<script type="application/ld+json">
+		{
+		"@context": "https://schema.org",
+		"@type": "LocalBusiness",
+		"name": "Nina Carducci",
+		"image": "https://github.com/malekbena/nina-carducci/blob/main/assets/images/nina/nina.avif",
+		"@id": "",
+		"url": "https://malekbena.github.io/nina-carducci/",
+		"telephone": "05 56 67 78 89",
+		"address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "FR"
+		},
+		"openingHoursSpecification": {
+			"@type": "OpeningHoursSpecification",
+			"dayOfWeek": [
+			"Monday",
+			"Tuesday",
+			"Wednesday",
+			"Thursday",
+			"Friday"
+			],
+			"opens": "10:00",
+			"closes": "19:00"
+		},
+		"sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr" 
+		}
+	</script>
 <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
 	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="./assets/maugallery.js"></script>
+<script src="./assets/maugallery.min.js"></script>
 <script src="./assets/scripts.min.js"></script>
 
 </html>
