deleting useless srcset images

--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
 					./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz_c_scale,w_1691.avif 1691w,
 					./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz_c_scale,w_1831.avif 1831w,
 					./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz_c_scale,w_1967.avif 1967w,
-					./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz_c_scale,w_2045.avif 2045w,
-					./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz_c_scale,w_2048.avif 2048w"
+					./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz_c_scale,w_2045.avif 2045w"
 						src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_nnb5oz/ryoji-iwata-wUZjnOv7t0g-unsplash.avif"
-						width="100%" height="100%" class="d-block w-100" alt="Homme en costume marchant dans la rue">
+						width="100%" height="100%" class="d-block w-100" alt="Homme en costume marchant dans la rue" />
 				</div>
 				<div class="carousel-item">
 					<img sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
@@ -112,10 +111,7 @@
 						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci_c_scale,w_1722.avif 1722w,
 						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci_c_scale,w_1839.avif 1839w,
 						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci_c_scale,w_1952.avif 1952w,
-						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci_c_scale,w_2046.avif 2046w,
-						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci_c_scale,w_2040.avif 2040w,
-						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci_c_scale,w_2042.avif 2042w,
-						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci_c_scale,w_2048.avif 2048w"
+						./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci_c_scale,w_2046.avif 2046w"
 						src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_ykivci/edward-cisneros-3_h6-1NPDGw-unsplash.avif"
 						class="d-block w-100" alt="2 mariés qui s'embrassent" loading="lazy" />
 				</div>
