google fonts call

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		media="print" onload="this.onload=null;this.removeAttribute('media');"
-		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet">
+	<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');"
+		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
+		<noscript>
+			<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
+		</noscript>
 	<meta charset="UTF-8">
 	<title>Nina Carducci - Photographe portraits et événements</title>
 	<meta name="description"
 		content="Photographe passionnée, je fige vos moments uniques avec créativité : concerts, entreprises, mariages, portraits. Capturez l'instant, créez des souvenirs éternels.">
-	
+
 	<!-- Google Rich Snippet -->
 	<meta itemprop="name" content="Nina Carducci - Photographe d'événements et de portraits sur Bordeaux" />
 	<meta itemprop="description"
@@ -50,7 +51,8 @@
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-						target="_blank"><img src="assets/images/instagram.png" alt="logo Instagram" height="20" width="20"></a></li>
+						target="_blank"><img src="assets/images/instagram.png" alt="logo Instagram" height="20"
+							width="20"></a></li>
 			</ul>
 		</div>
 	</div>
@@ -147,7 +149,8 @@
 			<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
 				prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
 				immortels, voilà ce qui me fait vibrer.</p>
-			<p class="about-me__description">Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le
+			<p class="about-me__description">Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons,
+				nous n’avons qu’une envie : le
 				figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux,
 				ou le partager au plus grand nombre.
 				C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma
@@ -332,7 +335,8 @@
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_419.avif 419w,
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_651.avif 651w,
 				./assets/images/camera_vlyda5/camera_vlyda5_c_scale,w_838.avif 838w"
-					src="./assets/images/camera_vlyda5/camera.avif" width="100%" height="100%" alt="Un appareil photo" loading="lazy" />
+					src="./assets/images/camera_vlyda5/camera.avif" width="100%" height="100%" alt="Un appareil photo"
+					loading="lazy" />
 			</div>
 		</div>
 	</div>
