--- a/index.html
+++ b/index.html
@@ -346,14 +346,15 @@
 		"@context": "https://schema.org",
 		"@type": "LocalBusiness",
 		"name": "Nina Carducci",
-		"image": "https://github.com/malekbena/nina-carducci/blob/main/assets/images/nina/nina.avif",
-		"@id": "",
 		"url": "https://malekbena.github.io/nina-carducci/",
+		"image": "https://github.com/malekbena/nina-carducci/blob/main/assets/images/nina/nina.avif",
+		"priceRange": "$$",
 		"telephone": "05 56 67 78 89",
 		"address": {
 			"@type": "PostalAddress",
 			"streetAddress": "68 avenue Alsace-Lorraine",
 			"addressLocality": "Bordeaux",
+			"addressRegion": "Gironde",
 			"postalCode": "33200",
 			"addressCountry": "FR"
 		},
